# engineering-statements

./: 2606-12683.yaml  README.md  pyproject.toml
notebooks/: 00_2606-12618.ipynb  00_2606-12788.ipynb  00_2606-13018.ipynb  00_2606-13590.ipynb  00_agapi.ipynb  00_anthropic_export_controls.ipynb  00_context(1).ipynb  README.md  REAMDE.md
src/engineering_statements/: __init__.py  notebooks.py  papers.py  reports.py  schema.py
statements/: 2311-03658.yaml  2311-04930.yaml  2406-01648.yaml  2409-02426.yaml  2504-09158.yaml  2505-03734.yaml  2508-08191.yaml  2508-13356.yaml  2509-10445.yaml  2512-08650.yaml  2601-06249.yaml  2603-14044.yaml  2603-20617.yaml  2605-01578.yaml  2605-05209.yaml  2605-10924.yaml  2606-00226.yaml  2606-12618.yaml  2606-12788.yaml  2606-12863.yaml  2606-13566.yaml  2606-13590.yaml  2606-13619.yaml  2606-14806.yaml  2606-16076.yaml  2606-16425.yaml  2606-16916.yaml  2606-17067.yaml  2606-17357.yaml  2606-20558.yaml  2606-24155.yaml  2606-25011.yaml  2606-26910.yaml  2606-29876.yaml  2606-31399.yaml  7517-4759.yaml  agapi-agents.yaml  alistar.yaml  allne-dna.yaml  anthropic-export-controls.yaml  (+14 more)
templates/: infographic.md  labreports.md  notebooks.md  statement.yaml
