[project]
name = "engineering-statements"
version = "0.1.0"
description = "Portable Engineering Statements for translating scientific intent into reproducible next steps and artifacts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0.0",
  "nbformat>=5.10.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0"
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
